# DevGuardian

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  test_mcp.py
.github/workflows/: ci.yml
devguardian/: __init__.py  server.py
devguardian/agents/: __init__.py  engineer.py  swarm.py
devguardian/tools/: __init__.py  architect.py  code_helper.py  debugger.py  git_ops.py  github_review.py  infra.py  mass_refactor.py  self_healing.py  tdd.py
devguardian/utils/: __init__.py  executor.py  file_reader.py  gemini_client.py  memory.py  security.py
tests/: test_debugger.py
