[project]
name = "devguardian"
version = "0.1.0"
description = "An MCP server for AI-powered coding help, debugging, and Git operations"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.3.0",
    "google-genai>=0.1.0",
    "langgraph>=0.0.10",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "langchain-google-genai>=1.0.0",
    "aiosqlite>=0.20.0",
    "python-dotenv>=1.0.0",
    "gitpython>=3.1.40",
]

[project.scripts]
devguardian = "devguardian.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["devguardian"]

# ---------------------------------------------------------------------------
# Ruff linting configuration
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 120
exclude = [".venv", "venv", "__pycache__", ".git", "dist", "build"]

[tool.ruff.lint]
# E = pycodestyle errors, F = pyflakes, W = pycodestyle warnings
select = ["E", "F", "W"]
ignore = [
    "E501",   # line too long — managed by line-length above
    "F401",   # imported but unused — common in __init__.py re-exports
    "E741",   # ambiguous variable name (e.g. 'l') — used in list comprehensions
    "W291",   # trailing whitespace — auto-handled by formatters
    "W293",   # whitespace before comment — auto-handled
    "E302",   # expected 2 blank lines
    "E303",   # too many blank lines
    "E305",   # expected 2 blank lines after end of function
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F811", "F401"]  # test files can shadow names and import fixtures
